--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Parminder singh"
 description: "Solving today's problem with tomorrow' logic."
-theme: minima
+theme: al-folio
 
 author:
   name: "Parminder singh"
