--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@ title: "Parminder singh"
 
 description: "Solving today's problem with tomorrow' logic."
 
-theme: al-folio
+theme: midnight
 
 author:
+
   name: "Parminder singh"
   
   email: "Parmindersingh368975@gmail.com"
