--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: "Parminder singh"
 
 description: "Solving today's problem with tomorrow' logic."
 
-theme: midnight
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 author:
 
